8175318: Performance issue regarding local JNI references

Avoid unnecessary repeated clears.

Reviewed-by: shade, simonis